# HEPrpms

./: .gitignore  README.md  alllocal.sh  cli-rebuild.sh  md5sums.txt  spectool  srpmsbuild.sh
.github/workflows/: main.yml
BAT/1.0.0/: BAT.spec  do.sh
CGAL/5.2/: CGAL-README.Fedora  CGAL.spec
COCOA/0.1.1/: COCOA.spec
DD4hep/01.15/: DD4hep.spec
DD4hep/01.16.01/: DD4hep.spec
DD4hep/01.17.00/: DD4hep.spec  patch-DD4hep-0.txt
DD4hep/01.18.00/: DD4hep.spec
DD4hep/01.19.00/: DD4hep.spec
DD4hep/01.20.00/: DD4hep.spec
DD4hep/01.30.00/: DD4hep.spec  do.sh
Delphes/3.4.3pre10/: Delphes.spec
Delphes/3.4.3pre12/: Delphes.spec
Delphes/3.5.0/: Delphes.spec
Delphes/3.5.1/: Delphes.spec  do.sh
Delphes/3.5.1pre10/: Delphes.spec
Delphes/3.5.1pre11/: Delphes.spec
Delphes/3.5.1pre12/: Delphes.spec
EvtGen/1.7.0/: EvtGen.spec  do.sh
EvtGen/2.0.0/: EvtGen.spec  patch-EvtGen-0.txt
EvtGen/2.1.1/: EvtGen.spec  do.sh
EvtGen/2.2.0/: EvtGen.spec
EvtGen/2.2.1/: EvtGen.spec
EvtGen/2.2.3/: EvtGen.spec  patch-EvtGen-0.txt
FP16/1.0.0/: FP16.spec
FXdiv/1.0.0/: FXdiv.spec
FeynHiggs/2.18.0/: FeynHiggs.spec  patch-FeynHiggs-0.txt
FeynHiggs/2.18.1/: FeynHiggs.spec  do.sh  patch-FeynHiggs-0.txt
FeynHiggs/2.19.0/: FeynHiggs.spec
HEJ/2.1.3/: HEJ.spec
HEPrpms/2023.12.30/: HEPrpms.spec  README.txt  prepare.sh
HEPrpms/2025.02.08/: 1.txt  2.txt  HEPrpms.spec  prepare.sh  prepareSUSE.sh
HEPrpms/2025.10.15/: 1.txt  2.txt  prepare.sh  submit.sh
HJets/1.3/: HJets.spec
HepMC3/3.2.3/: HepMC3.spec
HepMC3/3.2.5/: HepMC3.spec
Herwig/7.2.2/: Herwig.spec  (+1 more)
MC-TESTER/1.25.1/PATCHED/: Makefile  configure.in
MC-TESTER/1.25.1/PATCHED/HEPEvent/: Makefile
MC-TESTER/1.25.1/PATCHED/HepMC3Event/: Makefile
MC-TESTER/1.25.1/PATCHED/HepMCEvent/: Makefile
MC-TESTER/1.25.1/PATCHED/analyze/: ANALYZE.C  BOOKLET.C
MC-TESTER/1.25.1/PATCHED/platform/: make.inc.in
MC-TESTER/1.25.1/PATCHED/src/: Generate.cxx  Makefile
MCFM/10.0/ORIG/: CMakeLists.txt
MCFM/10.0/ORIG/src/Need/: CMakeLists.txt
MCFM/10.0/PATCHED/: CMakeLists.txt
MCFM/10.0/PATCHED/src/Need/: CMakeLists.txt
MCFM/10.3/ORIG/: CMakeLists.txt
Rivet/3.1.4/ORIG/: configure.ac
Rivet/3.1.4/ORIG/pyext/: Makefile.am  setup.py.in
Rivet/3.1.6/ORIG/doc/: Makefile.am
Rivet/4.0.0/PATCHED/: configure.ac
Rivet/4.0.0/PATCHED/src/Core/: AnalysisHandler.cc
Rivet/4.1.2/PATCHED/: configure.ac
Rivet/4.1.2/PATCHED/include/Rivet/Tools/: RivetSTL.hh
Rivet/4.1.2/PATCHED/src/Core/: AnalysisHandler.cc
Rivet/4.1.2/PATCHED/src/Core/yamlcpp/: emitterutils.cpp
TheP8I/2.0.2/PATCHED/: CMakeLists.txt
applgrid/1.6.32/applgrid-1.6.27/: Makefile.in  README  configure.ac
applgrid/1.6.32/applgrid-1.6.27/appl_grid/: appl_TH1D.h  appl_file.h  appl_grid.h  appl_root.h  appl_timer.h  binary_search.h  combination.h  correction.h  fastnlo.h  generic_pdf.h  histogram.h  serialisable.h  simpletimer.h  stream_vector.h  vector_stream.h
applgrid/1.6.32/applgrid-1.6.27/share/: top.config
applgrid/1.6.32/applgrid-1.6.27/src/: Cache.h  Makefile.am  Makefile.in  SparseMatrix3d.cxx  SparseMatrix3d.h  Splitting.h  TFileString.cxx  TFileString.h  TFileVector.cxx  TFileVector.h  appl_grid.cxx  appl_pdf.cxx  axis.h  basic_pdf.cxx  dis_pdf.cxx  dis_pdf.h  equals.h  fappl_fitter.cxx  fastnlo.cxx  file_index.cxx  generic_pdf.cxx  histogram.cxx  jetrad_pdf.cxx  lumi_pdf.cxx  mcfmw_pdf.cxx  mcfmw_pdf.h  mcfmwjet_pdf.h  mcfmzjet_pdf.cxx  mcfmzjet_pdf.h  nlojet_pdf.h  nlojetpp_pdf.h  sparse.h  threadManager.h  tsparse1d.h  tsparse3d.h
blackhat/0.9.9/PATCHED/: Makefile.am  blackhat-config.in  configure.ac  dataInstall.in
blackhat/0.9.9/PATCHED/src/: ME2_from_file.h  assembly.h  cached_OLHA.cpp  cut_Darren.h  eval_param.h  from_file.h  partial_amplitude.cpp  tree2.cc  tree3.cc  util.cc
blackhat/0.9.9/PATCHED/src/Interface/: BH_interface.cpp
blackhat/0.9.9/PATCHED/utils/: Makefile.am
cascade/3.0.01-beta01/PATCHED/: Makefile.am  configure.ac
cascade/3.0.01-beta01/PATCHED/include/: Makefile.am
cascade/3.0.01-beta01/PATCHED/misc/: Makefile.am
cascade/3.2.1/ORIG/: CMakeLists.txt  Makefile.am  configure.ac
cascade/3.2.1/ORIG/include/: HepMCSteering.inc  Pythia6ToHepMC2.inc  Pythia6ToHepMC3.inc
cascade/3.2.1/ORIG/src/: Makefile.am  Pythia6ToHepMC3.cc  casmain.F  steer_new.F
cascade/3.2.1/PATCHED/: CMakeLists.txt  Makefile.am  configure.ac
cascade/3.2.1/PATCHED/bases51/: Makefile.am
cascade/3.2.1/PATCHED/include/: HepMCSteering.inc  Makefile.am
cascade/3.2.1/PATCHED/manual/: cascade3.tex
cascade/3.2.1/PATCHED/misc/: Makefile.am
cascade/3.2.1/PATCHED/src/: Makefile.am  RivetInterface.cc  casmain.F  convhepmc-helpers.F  steer_new.F
cascade/3.3.3/ORIG/: CMakeLists.txt
cascade/3.3.3/ORIG/cmake/Modules/: FindTMDLIB.cmake
cascade/3.3.3/ORIG/src/: RivetInterface.cc
fastnlo/2.5.0.2826/ORIG/: configure.ac
fastnlo/2.5.0.2826/ORIG/src/: Makefile.am
hztool/4.3.2/PATCHED/: configure.ac
hztool/4.3.2/PATCHED/src/: Makefile.am
hztool/4.3.2/PATCHED/src/hera/: hzh0006017.F
qgraf/3.4.2/: Makefile.am  configure.ac  do.sh  qgraf.spec
qqvvamp/1.1/PATCHED/: CMakeLists.txt  p0002.cpp  qqvvamp.h
rapgap/3.303/ORIG/: configure.ac
rapgap/3.303/ORIG/bases51/: Makefile.am
rapgap/3.303/ORIG/misc/: Makefile.am
rapgap/3.303/ORIG/src/: Makefile.am
rapgap/3.303/ORIG/src/rapgap/: rgmain-hepmc.F
rapgap/3.303/PATCHED/: configure.ac
rapgap/3.303/PATCHED/bases51/: Makefile.am
rapgap/3.303/PATCHED/include/: HepMCSteering.inc  Pythia6ToHepMC2.inc
rapgap/3.303/PATCHED/misc/: Makefile.am
rapgap/3.303/PATCHED/src/: Makefile.am
rapgap/3.303/PATCHED/src/rapgap/: rgmain-hepmc.F
rapgap/3.310/ORIG/: configure.ac
rapgap/3.310/ORIG/include/: Makefile.am
rapgap/3.310/ORIG/src/: Makefile.am
rapgap/3.310/ORIG/src/rapgap/: rgmain-hepmc.F
rapgap/3.4.0/PATCHED/: CMakeLists.txt
rapgap/3.4.0/PATCHED/ariadne412/: atest.f
rapgap/3.4.0/PATCHED/src/rapgap/: RivetInterface.cc
tmdlib/2.2.08/PATCHED/: configure.ac
tmdlib/2.2.08/PATCHED/src/: TMDutils.cc
tmdlib/2.2.15/PATCHED/: CMakeLists.txt
tmdlib/2.2.15/PATCHED/src/: TMDutils.cc
(+1117 files in other folders)
