AUTOMAKE_OPTIONS = subdir-objects 
ACLOCAL_AMFLAGS = ${ACLOCAL_FLAGS} -I  . 

AM_CPPFLAGS=-I./include 

pkglibdir =    $(libdir)/$(PACKAGE)

noinst_LIBRARIES =                              
                              
noinst_HEADERS = 
 
bin_PROGRAMS=qgraf

qgraf_SOURCES=qgraf-3.4.2.f


dist_noinst_SCRIPTS = autogen.sh  Makefile.am configure.ac
#dist_inst_SCRIPTS = Doxyfile 
EXTRA_DIST=
